fixed multiselect checkbox alignment

--- a/resources/sass/theme/_theme.scss
+++ b/resources/sass/theme/_theme.scss
@@ -1456,15 +1456,6 @@ body {
             font-size: $inputOptionFontSize;
             padding: $inputOptionPadding;
             color: $textColor;
-            
-            label {
-                padding-left: 28px;
-                padding-top: 0px;
-            }
-            
-            .ui-chkbox {
-                margin-top: -10px;
-            }
         }
     }
     
